[project]
name = "caching-proxy-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "typer>=0.21.0",
    "uvicorn>=0.40.0",
]

[project.scripts]
caching-proxy = "caching_proxy.cli:main"

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.pyright]

[tool.ruff]
line-length = 120